@@ -1,8 +1,13 @@
 2001-11-16  Kevin B. Kenny  <kennykb@users.sourceforge.net>
+
 	* generic/tclListObj.c: removed a C++-style comment that
 	  was inadvertently left in the source code.
 	
 2001-11-16  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tests/interp.test: 
+	* generic/tclInterp.c (SlaveObjCmd): Corrected argument checking
+	for '$interp alias|aliases|issafe'. [Patch #479560] (thoyts, hobbs)
 
 	* unix/tclUnixInit.c: added HAVE_LANGINFO code block.
 	* unix/configure: regened
